Non-installed headers moved to lib/
Until now, the non-installed header files were mixed with the installed
ones in `lib/gnuastro/' this made them hard to manage and would also make
the code harder to read for a user: which headers can a user also use in
their own programs and which are internal to Gnuastro?

So the internal headers are now mixed with the library `.c' source files in
`lib/' and `lib/gnuastro/' is only used for those headers that will be
installed.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -17567,13 +17567,13 @@ additions/modifications to C library headers.
 The C library (or GNU C library) header files, for example
 @file{stdio.h} or @file{errno.h}.
 @item
-Installed library header files (for example @file{cfitsio.h} or
-@file{gsl/gsl_rng.h}), and Gnulib-specific headers (for example
-@file{nproc.h}). Note that the latter are imported with @code{""}, not
-@code{<>}, for example @code{#include <nproc.h>}.
+Installed library header files, including Gnuastro's installed headers (for
+example @file{cfitsio.h} or @file{gsl/gsl_rng.h}, or
+@file{gnuastro/fits.h}).
 @item
-Gnuastro common headers and libraries, for example @file{fits.h} or
-@file{neighbors.h}, see @ref{Headers}.
+Gnuastro's internal headers (that are not installed), for example
+@file{commonparams.h}, or Gnulib's headers (which are also not installed)
+like @file{nproc.h}.
 @item
 For programs, the @file{main.h} file (which is needed by the next group of
 headers).
