--- a/lib/gnuastro/README
+++ b/lib/gnuastro/README
@@ -1,12 +1,14 @@
 GNU Astronomy Utilities library header files
 ============================================
 
-This directory contins Gnuastro's library header files. Once installed, all
-these directories will be installed in the specified
+This directory contins Gnuastro's installed library header files. Once
+installed, these headers will be installed in the specified
 '$(prefix)/include/gnuastro' directory (the value of '$(prefix)' can be set
 at configure time, see the "Installation directory" of the Gnuastro book
 for more).
 
 Inside of Gnuastro, the directory is given the same name to make Gnuastro's
 internal code similar to what a user would use in their own programs once
-the header files are installed.
+the header files are installed. The headers that are not installed are kept
+in the parent directory of this directory mixed with the actual library
+`.c' source files.
